--- a/app/src/main/res/layout/activity_letter_detail.xml
+++ b/app/src/main/res/layout/activity_letter_detail.xml
@@ -28,5 +28,12 @@
             android:textSize="18sp"
             android:layout_marginTop="16dp"
             android:textColor="#FFFFFF" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:text="📞  Call Shashikant "
+            android:id="@+id/callbtn"
+            android:layout_margin="20dp"/>
     </LinearLayout>
 </ScrollView>
